--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ numpy==1.19.4
 Pillow==7.2.0
 pycryptodome==3.9.9
 python-dateutil==2.8.1
+python-gnupg==0.4.6
 s3transfer==0.3.3
 six==1.15.0
 urllib3==1.25.11
